# nongji-backend

./: .env.example  .gitignore  01-server-init.sh  02-code-pull.sh  03-deploy.sh  04-ssl-setup.sh  AGENTS.md  deploy.sh  deploy2.sh  pyproject.toml  server_init.sh  部署指南.md
apps/inspection/: admin.py  apps.py  models.py  permissions.py  serializers.py  services.py  urls.py  views.py
apps/inspection/migrations/: 0001_initial.py  0002_initial.py  0003_inspectionrecord_license_back_image_and_more.py  0004_remove_inspectionrecord_ocr_raw_data_and_more.py
apps/inspection/templates/: inspection_template.docx
apps/users/: admin.py  models.py  serializers.py  urls.py  views.py
apps/users/migrations/: 0001_initial.py  0002_alter_user_is_staff.py  0003_alter_user_role.py  0004_systemconfig.py
config/: settings.py  urls.py
staticfiles/admin/js/: ocr_recognize.js
staticfiles/inspection/js/: ocr_admin.js
