[project]
name = "vehicle-inspection"
version = "0.1.0"
description = "农机检测小程序后端"
requires-python = ">=3.10"
dependencies = [
    "django>=4.2,<5.0",
    "django-simpleui",
    "djangorestframework",
    "python-docx",
    "alibabacloud-ocr-api20210707",
    "python-dotenv",
    "pillow",
    "docxtpl>=0.20.2",
    # 生产环境依赖
    "gunicorn>=21.0,<22.0",
    "django-cors-headers>=4.0,<5.0",
    "whitenoise>=6.0,<7.0",
]

[dependency-groups]
dev = []
